fixed ellipsis if word overflows

--- a/components/LinkBox.module.css
+++ b/components/LinkBox.module.css
@@ -12,3 +12,8 @@
 .container:hover {
     text-decoration: underline;
 }
+
+.name {
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
